Fix autocomplete z-index

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -133,6 +133,7 @@ body.dark {
   padding: 6px 0;
   border: 1px solid #aaa;
   border-top: 1px solid #ddd;
+  z-index: 1002 !important;
   font-family: "adobe-garamond-pro", Georgia, serif;
 }
 .ui-autocomplete .ui-menu-item a {
